--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_facebook_auth: ^1.0.0
-  firebase_auth:
   firebase_core: ^0.4.0
+  cloud_firestore: ^0.13.7
+  firebase_auth: ^0.14.0+5
+  flutter_facebook_auth: ^1.0.0
   auth_buttons: ^0.0.4
   google_sign_in: ^4.5.6
   firebase_ui: ^1.0.8
