--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dev_dependencies:
   google_sign_in: ^4.5.6
   firebase_ui: ^1.0.8
   font_awesome_flutter: ^8.10.0
-  
+  flutter_facebook_login: ^3.0.0
   meta: ^1.2.3
 
 # For information on the generic Dart part of this file, see the
