--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,13 @@ dev_dependencies:
   font_awesome_flutter: ^8.10.0
   flutter_facebook_login: ^3.0.0
   meta: ^1.2.3
+  flutter_launcher_icons: ^0.8.1
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -59,6 +66,7 @@ flutter:
     - assets/fonts/OpenSans.ttf
     - assets/logos/facebook.jpg
     - assets/logos/google.jpg
+   
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
