--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dev_dependencies:
   flutter_facebook_login: ^3.0.0
   meta: ^1.2.3
   flutter_launcher_icons: ^0.8.1
+  splashscreen: ^1.2.0
   
 
 flutter_icons:
@@ -67,6 +68,7 @@ flutter:
     - assets/fonts/OpenSans.ttf
     - assets/logos/facebook.jpg
     - assets/logos/google.jpg
+    - assets/logos/Schiary.png
    
 
   # An image asset can refer to one or more resolution-specific "variants", see
